--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,17 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #012030;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   min-height: 100vh;
   color: white;
+}
+
+@media screen and (max-width: 760px){
+    body { 
+      justify-content: start;
+      align-items: start;
+    }
 }
 
 code {
