--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -1,14 +1,15 @@
 .list { 
   margin-top: 0;
-  background-color: white;
+  background-color: #FAFAFA;
   color: black;
 }
 
 .list-empty {
-  background-color: white;
+  background-color: #FAFAFA;
   height: 60vh;
   font-size: 30px;
   display: flex;
+  padding: 15px;
   align-items: center;
   justify-content: center;
   color: gray;
