--- a/src/components/Error/Error.css
+++ b/src/components/Error/Error.css
@@ -1,19 +1,16 @@
 .error-default {
   background-color: #ef5350;  
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding: 15px 15px 15px 15px;
   display: flex;
-  flex-direction: column;
 }
 
 .error-close {
-  width: 100%;
   text-align: right;
+  width: 10%;
 }
 
 .error-message {
+  width: 90%;
   font-weight: bold
 }
 
