--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -2,6 +2,7 @@
   margin-top: 0px;
   background-color: #FAFAFA;
   color: black;
+  min-height: 60vh;
 }
 
 .list-empty {
@@ -9,7 +10,7 @@
   height: 60vh;
   font-size: 30px;
   display: flex;
-  padding: 0 15px 15px 15px;
+  padding: 0 15px 0px 15px;
   align-items: center;
   justify-content: center;
   color: gray;
