--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -2,19 +2,27 @@
   display: flex;
   min-width: 50vw;
   margin-bottom: 0;
+  z-index: 10;
+  position: relative;
+  box-shadow: 0px 0px 19px -14px rgba(0, 0, 0, 1);
 }
 
 @media screen and (max-width: 760px){
-    .container { 
-      width: 100vw; 
-      margin: 0;
-      padding: 0;
-    } 
+  .container { 
+    width: 100vw; 
+    margin: 0;
+    padding: 0;
+  } 
+
+  .searchbutton {
+    width: 15%;
+  }
 }
 
 .searchbar {
   padding: 15px;
   font-size: 20px;
+  background-color: #fafafa;
   width: 100%;
   float: left;
   border: 0
