--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.break-after {
+  flex-basis: 100%;
+  height: 0;
+}
