--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -10,7 +10,6 @@
   height: 60vh;
   font-size: 30px;
   display: flex;
-  padding: 0 15px 0px 15px;
   align-items: center;
   justify-content: center;
   color: gray;
@@ -29,22 +28,20 @@
 .list-cities {
   margin-top: 0;
   list-style: none;
-  padding: 0 15px 15px 15px;
+  padding-left: 0;
 }
 
 .list-element {
+  padding: 15px;
   display: flex;
   font-size: 30px;
-  padding-top: 15px;
-  padding-bottom: 15px;
   text-align: center;
   align-items: center;
-  border-bottom: 1px solid black
+  cursor: pointer;
 }
 
-.list-element:last-of-type {
-  border-bottom: 0;
-  padding-bottom: 0;
+.list-element:hover {
+  background-color: #eeeeee;
 }
 
 .list-icon {
