--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -3,6 +3,8 @@
   background-color: #FAFAFA;
   color: black;
   min-height: 60vh;
+  max-height: 60vh;
+  overflow: scroll;
 }
 
 .list-empty {
@@ -44,6 +46,10 @@
   background-color: #eeeeee;
 }
 
+.list-element-active {
+  background-color: #f5f5f5;
+}
+
 .list-icon {
   color: #FFB03B;
 }
@@ -57,3 +63,10 @@
   min-width: 25%;
   text-align: right;
 }
+
+.list-city-detail {
+  background-color: #eeeeee;
+  padding: 15px;
+  box-shadow: inset 0px 0px 5px -3px rgba(66, 68, 90, 1);
+}
+
