--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,22 @@ code {
   flex-basis: 100%;
   height: 0;
 }
+
+.font-bold {
+  font-weight: 500;
+}
+
+.card-header {
+  font-size: 20px;
+}
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.text-align-right {
+  text-align: right;
+}
+
+
