--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,17 +1,13 @@
 .container {
   display: flex;
   min-width: 50vw;
-  margin-bottom: 0;
+  box-shadow: 0px 0px 19px -19px rgba(0, 0, 0, 1);
   z-index: 10;
-  position: relative;
-  box-shadow: 0px 0px 19px -14px rgba(0, 0, 0, 1);
 }
 
 @media screen and (max-width: 760px){
   .container { 
     width: 100vw; 
-    margin: 0;
-    padding: 0;
     position: sticky;
     top: 0;
   } 
@@ -22,16 +18,12 @@
 }
 
 .searchbar {
-  padding: 15px;
+  border: 0;
   font-size: 20px;
-  background-color: #fafafa;
   width: 100%;
-  float: left;
-  border: 0
-}
-
-.searchbar:focus {
-  outline: none;
+  padding: 15px;
+  margin: 0;
+  -webkit-appearance: none;
 }
 
 .searchbutton {
@@ -41,6 +33,7 @@
   cursor: pointer;
   font-size: 20px;
   padding: 15px;
+  margin: 0;
 }
 
 .searchbutton:active {
